part2/2.02/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: pyrynot/todo-app:2.02
          imagePullPolicy: Always
          resources:  # added to get rid of kubernetes extension warnings
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: image-cache
              mountPath: /app/static
        - name: todo-backend
          image: pyrynot/todo-backend:2.02
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: image-cache
              mountPath: /app/static
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: image-cache-pvc
